0027544: problem compiling OCCT with gcc version 4.8.2 gives error 'array subscript is above array bounds'

Possible out of borders problem is fixed.